--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     <button onclick="showGif('block')">Block 🤬🤬</button>
 
     <div class="gif-box">
-      <img id="yes" src="https://tenor.com/en-IN/view/om-shanti-om-meme-om-shanti-om-srk-om-shanti-om-shahrukh-khan-falling-shah-rukh-khan-gif-1564110625094239079">
+      <img id="yes" src="https://c.tenor.com/FbTWU5YoA2cAAAAd/tenor.gif">
       <img id="no" src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyb3ZxYXVjZmx5NXlxeGZpaTFwOWZ1aWFwM3BraXo1ZmJ1ZDhvMXEzciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ruyS8Zw9sBqE5UjOnY/giphy.gif">
       <img id="think" src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUydWY1MDJxYmtwM2tqMmJtN2Rnd2p0MXVnaHNrNWxrZ3kzcmVwcnp3cCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/pFZTlrO0MV6LoWSDXd/giphy.gif">
-      <img id="pagal" src="https://tenor.com/j5PWlmuhqrQ.gif">
+      <img id="pagal" src="https://media.tenor.com/c6nXyQmertAAAAAi/the-voices.gif">
       <img id="block" src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUydGFqZm1zeDB5eGt1cms4N3d4cHNyNTkxazBiZnZlbnp5ZDlvcWhjZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/dI53rvCkTsyJWFA3Fc/giphy.gif">
     </div>
   </div>
